# Embedding-Rerank-test

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
embedding-service/: .dockerignore  Dockerfile  app.py  config.py  embed.py  pydantic_models.py  requirements.txt
example/: README.md  main.py
example/static/: index.html
notebooks/: notebook.ipynb  test.py
postgres/init/: 02-roles.sql  03-schema.sql  04-indexes.sql
rerank-service/: Dockerfile  app.py  config.py  pydantic_models.py  requirements.txt  rerank.py
